--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <div class="overlay"></div>
     <div class="thank-you-container">
         <h1>תודה רבה!</h1>
-        <p>הפרטים נקלטו במערת ונייצור קשר בהקדם האפשרי.</p>
+        <p>הפרטים נקלטו במערכת נייצור קשר בהקדם האפשרי.</p>
         <a href="https://stepupdigital.co.il/" class="btn">חזרה לדף הבית</a>
     </div>
 </body>
