--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <div class="thank-you-container">
         <h1>תודה רבה!</h1>
         <p>הפרטים נקלטו במערכת נייצור קשר בהקדם האפשרי.</p>
-        <a href="https://stepupdigital.co.il/" class="btn">חזרה לדף הבית</a>
+        <a href="https://avi-shiri.co.il/" class="btn">חזרה לדף הבית</a>
     </div>
 </body>
 </html>
